Modify images sizes and aspect ratio, as well as Add labels to button and text to forms in order to comply with best practice, accessibility and performance of the lighthouse testing tool.

--- a/play.html
+++ b/play.html
@@ -1724,15 +1724,15 @@
             <p id="question-display"></p>
             <div class="answer-display">
               <input type="radio" id="answer-one" name="answers" required/>
-              <label for="answer-one"></label>
+              <label for="answer-one">answer-one</label>
             </div>
             <div class="answer-display">
               <input type="radio" id="answer-two" name="answers" />
-              <label for="answer-two"></label>
+              <label for="answer-two">answer-two</label>
             </div>
             <div class="answer-display">
               <input type="radio" id="answer-three" name="answers" />
-              <label for="answer-three"></label>
+              <label for="answer-three">answer-three</label>
             </div>
             <button id="submit-answer" type="submit">Let's check!</button>
           </form>
@@ -1796,16 +1796,16 @@
 
         <!-- Game controls -->
         <div class="controls">
-          <button id="arrow-up" data-button-direction="up" class="control-buttons button-up">
+          <button id="arrow-up" data-button-direction="up" class="control-buttons button-up" aria-label="Up directional button.">
             <i class="far fa-arrow-alt-circle-up"></i>
           </button>
-          <button id="arrow-left" data-button-direction="left" class="control-buttons button-left">
+          <button id="arrow-left" data-button-direction="left" class="control-buttons button-left" aria-label="Left directional button.">
             <i class="far fa-arrow-alt-circle-left"></i>
           </button>
-          <button id="arrow-right" data-button-direction="right" class="control-buttons button-right">
+          <button id="arrow-right" data-button-direction="right" class="control-buttons button-right" aria-label="Right directional button.">
             <i class="far fa-arrow-alt-circle-right"></i>
           </button>
-          <button id="arrow-down" data-button-direction="down" class="control-buttons button-down">
+          <button id="arrow-down" data-button-direction="down" class="control-buttons button-down" aria-label="Down directional button.">
             <i class="far fa-arrow-alt-circle-down"></i>
           </button>
           <div class="strikes-area">
