--- a/study.html
+++ b/study.html
@@ -87,7 +87,7 @@
         <span>
           If you want to discover in depth some sections, look for the
           magnifier:
-          <button class="magnifier">
+          <button class="magnifier" aria-label="Toggle extra content.">
             <i class="fas fa-search-plus"></i>
           </button>
         </span>
@@ -122,9 +122,9 @@
     <div class="subject-content-wrapper">
       <!-- Volcano article -->
       <article class="subject-content volcano show">
-        <h4 class="heading">Volcano</h4>
+        <h3 class="heading">Volcano</h3>
 
-        <h5>Definition:</h5>
+        <h4>Definition:</h4>
         <p>
           Volcanoes have different shapes and forms. Some look like mountains
           (<em>cone like shape</em>) from which molten rocks and gas can
@@ -133,7 +133,7 @@
           When a volcano in not in eruption, everything is happening inside
           it. But what is going on in there?
         </p>
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -148,9 +148,9 @@
           </p>
         </div>
 
-        <h5>How Does It Work?</h5>
+        <h4>How Does It Work?</h4>
 
-        <h6>The Layers</h6>
+        <h5>The Layers</h5>
         <div class="images-container">
           <!-- [Infographic vector created by brgfx - www.freepik.com<](https://www.freepik.com/vectors/infographic)-->
           <img src="assets/images/subjects-images/volcano/earth-structure.jpg"
@@ -168,7 +168,7 @@
           as <strong>lava</strong>.
         </p>
 
-        <h6>The Movements</h6>
+        <h5>The Movements</h5>
         <div class="images-container">
           <!-- Image by gritsalak from Adobe Stock: 
                 (https://stock.adobe.com/ie/images/volcano-and-earthquake-infographic-vector/211375558?prev_url=detail) -->
@@ -193,7 +193,7 @@
           especially hot and the conditions are extreme.
         </p>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -229,7 +229,7 @@
           </ul>
         </div>
 
-        <h5>The Different types of volcanoes:</h5>
+        <h4>The Different types of volcanoes:</h4>
         <!-- The following four images are extracted from one image by designua from Adobe Stock: 
             (https://stock.adobe.com/ie/images/volcano-type-shield-dome-composite-and-caldera/319892493?prev_url=detail) -->
         <div class="images-container">
@@ -293,7 +293,7 @@
           </li>
         </ul>
 
-        <h5>The Parts of a Volcano:</h5>
+        <h4>The Parts of a Volcano:</h4>
         <div class="images-container">
           <!-- Image by blueringmedia from Adobe Stock: 
                 (https://stock.adobe.com/ie/images/part-of-a-volcano/377249194?prev_url=detail) -->
@@ -314,7 +314,7 @@
           <li>Layers of emitted lava and ash</li>
         </ul>
 
-        <h5>Different Types of Eruptions:</h5>
+        <h4>Different Types of Eruptions:</h4>
         <span> Volcanic eruptions can be of two types: </span>
         <ul>
           <li>
@@ -328,7 +328,7 @@
           </li>
         </ul>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -358,7 +358,7 @@
           </p>
         </div>
 
-        <h5>Interesting Facts:</h5>
+        <h4>Interesting Facts:</h4>
         <ul>
           <li>
             About 90% of all active volcanoes are located in the Pacific Ring
@@ -415,7 +415,7 @@
           </li>
         </ul>
 
-        <h5>Scientific Terms:</h5>
+        <h4>Scientific Terms:</h4>
 
         <ul>
           <li><strong>Volcanology</strong>: Study of volcanoes.</li>
@@ -450,9 +450,9 @@
 
       <!-- Jungle article -->
       <article class="subject-content jungle hide">
-        <h4 class="heading">Jungle</h4>
+        <h3 class="heading">Jungle</h3>
 
-        <h5>Definition:</h5>
+        <h4>Definition:</h4>
         <p>
           Jungle is a generic term that refers to a dense forest generally
           where the weather is hot.<br />
@@ -465,7 +465,7 @@
           contribute in sustaining the Earth's ecosystem as we know it.<br />
           while each rainforest is unique, they all share common features.
         </p>
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -480,9 +480,9 @@
           </p>
         </div>
 
-        <h5>How Does It Work?</h5>
+        <h4>How Does It Work?</h4>
 
-        <h6>Climate</h6>
+        <h5>Climate</h5>
 
         <p>
           Jungles precipitation is one of the highest on the globe. It
@@ -496,7 +496,7 @@
           <strong>equable</strong>: with not much variation.
         </p>
 
-        <h6>Structure</h6>
+        <h5>Structure</h5>
         <div class="images-container">
           <!-- Image by Rudzhan from Adobe Stock: 
                 (https://stock.adobe.com/ie/images/rainforest-layers-educational-banner-or-poster-jungle-vertical-structure-educational-scheme-emergent-canopy-understory-and-floor-levels-flat-vector-illustration/408770051?prev_url=detail&asset_id=408770051) -->
@@ -538,7 +538,7 @@
           </li>
         </ul>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -559,7 +559,7 @@
           </p>
         </div>
 
-        <h6>Ecosystem and Biodiversity</h6>
+        <h5>Ecosystem and Biodiversity</h5>
 
         <p>
           The rainforests have the most important terrestrial biodiversity on
@@ -578,7 +578,7 @@
           <strong>specialization</strong>.
         </p>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -602,7 +602,7 @@
           </p>
         </div>
 
-        <h5>The Importance of the Jungle:</h5>
+        <h4>The Importance of the Jungle:</h4>
 
         <ul>
           <li>Provide home to an immense diversity of plants and animals.</li>
@@ -627,7 +627,7 @@
           </li>
         </ul>
 
-        <h5>The Jungle in Danger:</h5>
+        <h4>The Jungle in Danger:</h4>
         <div class="images-container">
           <!-- Image by whitcomberd from Adobe Stock: 
                 (https://stock.adobe.com/ie/images/aerial-view-of-deforestation-rainforest-being-removed-to-make-way-for-palm-oil-and-rubber-plantations/240813889?prev_url=detail&asset_id=240813889) -->
@@ -645,7 +645,7 @@
           to save the rainforests.
         </p>
 
-        <h5>Interesting Facts:</h5>
+        <h4>Interesting Facts:</h4>
         <ul>
           <li>About 25% of the medicines come from the jungle.</li>
           <li>
@@ -673,7 +673,7 @@
           </li>
         </ul>
 
-        <h5>Scientific Terms:</h5>
+        <h4>Scientific Terms:</h4>
 
         <ul>
           <li>
@@ -708,9 +708,9 @@
 
       <!-- Ocean article -->
       <article class="subject-content ocean hide">
-        <h4 class="heading">Ocean</h4>
+        <h3 class="heading">Ocean</h3>
 
-        <h5>Definition:</h5>
+        <h4>Definition:</h4>
         <p>
           An Ocean is a large body of salted water. There is only one global ocean
           that covers 71% of the Earth surface. All the water it contains is
@@ -721,7 +721,7 @@
           the Indian and the Arctic. However nowadays a fifth basins is
           recognized by most of the countries: the Arctic basin.
         </p>
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -746,7 +746,7 @@
           </p>
         </div>
 
-        <h5>Geographic Repartition:</h5>
+        <h4>Geographic Repartition:</h4>
 
         <div class="images-container">
           <!--Image by [our homework help](https://ourhomeworkhelp.wordpress.com/2016/07/11/map-of-continents-oceans/) -->
@@ -775,9 +775,9 @@
           delimited by the North border of the continents that surround it.
         </p>
 
-        <h5>How Does It Work?</h5>
+        <h4>How Does It Work?</h4>
 
-        <h6>Tides:</h6>
+        <h5>Tides:</h5>
         <div class="images-container">
           <!-- Image by brgfx from [freepik](https://www.freepik.com): 
                 (https://www.freepik.com/free-vector/tidal-movements-earth_1466597.htm#page=1&query=ocean%20tides&position=49) -->
@@ -797,7 +797,7 @@
           ecological feature of the tides.
         </p>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -810,7 +810,7 @@
           </p>
         </div>
 
-        <h6>Currents:</h6>
+        <h5>Currents:</h5>
 
         <p>
           Ocean current is a continuous movement of water. They are created
@@ -821,7 +821,7 @@
           salinity.
         </p>
 
-        <button class="magnifier">
+        <button class="magnifier"  aria-label="Toggle extra content.">
           <i class="fas fa-search-plus"></i>
         </button>
         <div class="extra-info hide">
@@ -837,7 +837,7 @@
           </p>
         </div>
 
-        <h6>THe Water Cycle:</h6>
+        <h5>THe Water Cycle:</h5>
         <div class="images-container">
           <!-- Image by U.S. Geological Survey, Department of the Interior/USGS Howard Perlman, USGS and John Evans, USGS. from Kiddle : 
                 (https://kids.kiddle.co/Image:Water_cycle.png) -->
@@ -902,7 +902,7 @@
           </li>
         </ul>
 
-        <h5>Importance of The Ocean:</h5>
+        <h4>Importance of The Ocean:</h4>
         <p>
           The Ocean produces over 50% of the world oxygen and absorbs 50 times
           more carbon dioxide than our atmosphere.<br />
@@ -915,7 +915,7 @@
           transportation.
         </p>
 
-        <h5>Ocean Life:</h5>
+        <h4>Ocean Life:</h4>
         <p>
           <strong>Plankton</strong> are mostly microscopic organisms drifting
           and carried by the current and the tides in the ocean and unable to
@@ -936,7 +936,7 @@
           sandy beach.
         </p>
 
-        <h5>Interesting Facts:</h5>
+        <h4>Interesting Facts:</h4>
         <ul>
           <li>More than 80% of the ocean is unexplored.</li>
           <li>More than 90% of the total water on Earth is in the Ocean.</li>
@@ -994,7 +994,7 @@
             title="Illustration of the distribution of the water on the planet Earth." height="484" width="600" />
         </div>
 
-        <h5>Scientific Terms:</h5>
+        <h4>Scientific Terms:</h4>
         <ul>
           <li>
             <strong>Seas</strong>: Smaller than ocean and usually located
