Add a more concise alt and titles to the vanigation bar items and adjusted the headings hierarchy in the home page and adapted the corresponding style in style.css

--- a/404.html
+++ b/404.html
@@ -28,14 +28,14 @@
       <nav>
         <!-- Logo -->
         <a href="index.html" class="logo" aria-label="Link to the home page.">
-          <img src="assets/images/logo/logo.png" alt="Know It logo representing a smiling friendly brain with eyes."
+          <img src="assets/images/logo/logo.png" alt="Know It logo."
             title="Link to the home page." height="40" width="40" />
         </a>
 
         <!--Dropdown navigation menu for all devices -->
-        <button id="navigation-button" class="menu-icon" aria-label="Navigation menu.">
+        <button id="navigation-button" class="menu-icon" aria-label="Navigation menu button.">
           <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-          <img src="assets/images/icons/menu.png" alt="Icon of a book." title="Navigation menu." height="40"
+          <img src="assets/images/icons/menu.png" alt="Navigation menu button." height="40"
             width="40" />
           <span class="menu-text">Menu</span>
         </button>
