--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Know It is a fun learning platform that promotes curiosity and enjoyment. We provide an entertaining way of studying 
@@ -28,14 +28,14 @@
       <nav>
         <!-- Logo -->
         <a href="index.html" class="logo" aria-label="Link to the home page.">
-          <img src="assets/images/logo/logo.png" alt="Know It logo representing a smiling friendly brain with eyes."
+          <img src="assets/images/logo/logo.png" alt="Know It logo."
             title="Link to the home page." height="40" width="40" />
         </a>
 
         <!--Dropdown navigation menu for all devices -->
-        <button id="navigation-button" class="menu-icon" aria-label="Navigation menu.">
+        <button id="navigation-button" class="menu-icon" aria-label="Navigation menu button.">
           <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-          <img src="assets/images/icons/menu.png" alt="Icon of a book." title="Navigation menu." height="40"
+          <img src="assets/images/icons/menu.png" alt="Navigation menu button." height="40"
             width="40" />
           <span class="menu-text">Menu</span>
         </button>
@@ -81,7 +81,7 @@
     <!-- main section -->
     <section class="home-section">
       <div class="statement">
-        <h3>Here learning is FUN !</h3>
+        <h2>Here learning is FUN !</h2>
       </div>
       <a href="about.html" class="buttons about-button">About</a>
       <a href="study.html" class="buttons study-button">Study</a>
